infoLeft fixed to fit.  Spacing around img and article needs tuning.

--- a/resources/styles.css
+++ b/resources/styles.css
@@ -121,7 +121,6 @@ article {
   width: 60%;
   height: 100%;
   margin: 32px 24px;
-  border: red 2px solid;
 }
 
 .largeSection > div {
@@ -194,13 +193,18 @@ article {
 }
 
 #infoLeft {
-  width: auto;
-  border: red 2px solid;
+  width: 60%;
+  padding: 0 24px;
 }
 
 #infoImg {
-  width: 60%;
-  height: auto;;
+  margin: 0;
+  width: 100%;
+}
+
+#infoLeft > article {
+  display: flex;
+  flex-direction: column;
 }
 
 
